Tryna fix player